EVE CORE
http://almende.github.com/eve/


<not yet released>, version 0.16

- Fixed requiring a sender for all calls via the AgentFactory.


2013-01-11, version 0.15

- The send method of the Agent is more generic and no longer only accepts an
  ObjectNode as params, but also a Map or POJO. 
- An agent proxy can be created via the AgentFactory by providing a Java 
  Interface. So instead of Agent.send(url, method, params, type) where the 
  method is a string and one has to prepare an object with the parameters, one 
  can create a proxy for the agent and execute a regular java method call like
  ProxyAgent.method(a, b).
  When a call is made to a local agent, the local agents method is immediately
  invoked, without converting the call into JSON-RPC.
- Improved stability of the agents context.


2012-12-21, version 0.14

- Implemented synchronous send for the XmppService.
- Re-implemented the LogAgent, used to monitor an agents events in their 
  web interface.


2012-12-14, version 0.13

- Updated the agents web interface to show all its urls
- Renamed the parameter XmppService.serviceName to XmppService.service


2012-12-13, version 0.12

- The AgentServlet registers itself to the AgentFactory now. 
  Servlet configuration is therefore moved from eve.yaml to web.xml.
- The method getAgentFactory is moved from the context to the agent itself.
- The method getScheduler is moved from the context to the agent itself.
- Scheduler must be configured in eve.yaml now, the scheduler is no longer 
  coupled to the ContextFactory.


2012-12-06, version 0.11

- Major change in the core of Eve. Incompatible with previous versions.
- Implemented support for multiple communication services. 
- Agents must now explicitly be created before they can be invoked. The
  AgentFactory contains methods to create, get, and delete agents, and 
  the ContextFactory is adjusted for this purpose.
- Implemented messaging protocol XMPP.
- Configuration of agent classes is no longer needed.